fix(lightbox): show full image on smaller screens

--- a/styles/index.less
+++ b/styles/index.less
@@ -97,6 +97,10 @@ html {
   }
 }
 
+.ReactModal__Content--after-open {
+  display: flex;
+}
+
 .ReactModal__Content--after-open{
   @media screen and (max-width: 1220px) {
     margin-left: -40px;
